--- a/FSharp.Postcode/FSharp.Postcode.fsproj
+++ b/FSharp.Postcode/FSharp.Postcode.fsproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>Postcode</AssemblyName>
+    <TargetFramework>netcoreapp2.2</TargetFramework>    
     <Description>A functional port of postcode.js.</Description>
     <Authors>Ben Blackmore and contributors</Authors>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
