--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,8 @@ trigger:
 pool:
   vmImage: 'Ubuntu-16.04'
 
+name: $(MajorVersion).$(MinorVersion).$(PatchVersion).$(BuildID)
+
 steps:
 - task: DotNetCoreCLI@2
   inputs:
