--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,9 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+variables: 
+  buildVersion: $(MajorVersion).$(MinorVersion).$(PatchVersion).$(BuildID) 
+
 trigger:
 - master
 
