--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pool:
 name: $(MajorVersion).$(MinorVersion).$(PatchVersion).$(BuildID)
 
 steps:
-- script: echo $(Build.BuildNumber)  
+- script: build.sh "GenerateAssemblyInfo"
 - task: DotNetCoreCLI@2
   inputs:
     command: restore
