copy files to staging

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,11 @@ steps:
     testRunner: VSTest
     testResultsFiles: '**/*.trx'   
 
+- task: CopyFiles@2
+  inputs:
+    contents: '_buildOutput\**'
+    targetFolder: $(Build.ArtifactStagingDirectory)
+
 - task: PublishBuildArtifacts@1
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
