--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,5 +51,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: drop
+    artifactName: Fsharp.Postcode-$(buildVersion)
 
