--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,8 +45,12 @@ steps:
   displayName: Pack
   inputs:
     command: pack
-    projects: ' ./FSharp.Postcode/FSharp.Postcode.fsproj'
-    arguments: '--configuration Release --output $(Build.BinariesDirectory) -p:PackageVersion=$(buildVersion) --include-symbols' 
+    projects: 
+    configuration: 'release'
+    packagesToPack: './FSharp.Postcode/FSharp.Postcode.fsproj'
+    packDirectory: $(Build.BinariesDirectory)
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: $(buildVersion)
 
 - task: CopyFiles@2
   inputs:
